# project-euler

./: README.md  project-euler.cabal
app/: Main.hs
src/: Lib.hs  Problem1.hs  Problem2.hs
