name:                project-euler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/project-euler#readme
license:             BSD3
license-file:        LICENSE
author:              Thomas Wielandt
maintainer:          wielants@github.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Problem1, Problem2
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable project-euler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , project-euler
  default-language:    Haskell2010

test-suite project-euler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , project-euler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wielants/project-euler
